--- a/0introduction.tex
+++ b/0introduction.tex
@@ -1,5 +1,5 @@
 
-\chapter{Introduction}
+\chapter{Introduction}\
 \addcontentsline{toc}{chapter}{Introduction}
 In recent years, the humanity has created many graph datasets much larger than those available ever before.
 Those graphs became a very popular object of research. Most notable examples are \emph{the Web graph} -- a graph of Internet websites and links between them, and all kinds of social networks. Other interesting graphs include transportation routes, similarity of scientific articles or citations among them.
@@ -102,3 +102,4 @@ A binary relation $\le$ over a set $P$ is a \emph{partial order} if it is reflex
 Function $f: D \to C$ is monotone with respect to pre-order $\sqsubseteq$ if $x \sqsubseteq y \rightarrow f(x) \sqsubseteq f(y)$ for each $x, y \in D$.
 \end{defn}
 
+\todo{co z kropkami składniowymi na końcu reguły?}
