--- a/praca.tex
+++ b/praca.tex
@@ -13,6 +13,10 @@
 \usepackage[font=small]{caption}
 \usepackage{color}
 \usepackage[section]{placeins}
+\usepackage{fancyvrb}
+\usepackage[usenames,dvipsnames]{xcolor}
+
+\fvset{frame=single,framesep=1mm,fontsize=\scriptsize,numbers=left,framerule=.3mm,numbersep=1mm,commandchars=\\\{\}}
 
 % kindle page geometry (no page numbers)
 %\usepackage[papersize={3.6in,4.8in},hmargin=0.1in,vmargin={0.1in,0.1in}]{geometry}
